# PPIL_Manukyan_Lagler

./: .gitignore  LICENSE  README.MD  README.md  TODO  index.html
Client/: Brouillon  CMakeLists.txt  Cercle.cpp  Cercle.h  Client.cpp  Client.h  ClientWin.cpp  ClientWin.h  Erreur.cpp  Erreur.h  Expert.cpp  Expert.h  ExpertCercle.cpp  ExpertCercle.h  ExpertForme.cpp  ExpertForme.h  ExpertGroupe.cpp  ExpertPolygone.cpp  ExpertPolygone.h  ExpertRectangle.cpp  ExpertRectangle.h  ExpertSegment.cpp  ExpertSegment.h  ExpertTriangle.cpp  ExpertTriangle.h  Fenetre.h  Forme.cpp  Forme.h  GroupeForme.cpp  GroupeForme.h  Matrice.cpp  Matrice.h  Matrice2x2.cpp  Matrice2x2.h  Point2D.cpp  Point2D.h  Polygone.cpp  Polygone.h  Rectangle.cpp  Rectangle.h  (+19 more)
Client/cpp/: main.cpp
Client/cpp/Autres/: Erreur.cpp  Matrice2x2.cpp
Client/cpp/Client/: Client.cpp  ClientWin.cpp  TransformationAffine.cpp  VisiteurDessine.cpp
Client/cpp/Expert/: Expert.cpp  ExpertCercle.cpp  ExpertForme.cpp  ExpertGroupe.cpp  ExpertPolygone.cpp  ExpertSegment.cpp  ExpertTriangle.cpp
Client/cpp/Formes/: Cercle.cpp  Forme.cpp  GroupeForme.cpp  Polygone.cpp  Segment.cpp  Triangle.cpp  Vecteur2D.cpp
Client/cpp/Test/: TestCercle.cpp  TestGroupeForme.cpp  TestPolygone.cpp  TestSegment.cpp  TestTriangle.cpp  TestVector2D.cpp
Client/h/Autres/: Erreur.h  Matrice2x2.h
Client/h/Client/: Client.h  ClientWin.h  Fenetre.h  TransformationAffine.h  VisiteurAbstrait.h  VisiteurDessine.h
Client/h/Expert/: Expert.h  ExpertCercle.h  ExpertForme.h  ExpertGroupe.h  ExpertPolygone.h  ExpertSegment.h  ExpertTriangle.h
Client/h/Formes/: Cercle.h  Forme.h  GroupeForme.h  Polygone.h  Segment.h  Triangle.h  Vecteur2D.h
Serveur/: Brouillon  Brouillon.java  Cercle.java  DrawClick.java  Erreur.java  Expert.java  ExpertAWT.java  ExpertAwt.java  ExpertCercle.java  ExpertDessine.java  ExpertDessins.java  ExpertFormes.java  ExpertJavaFX.java  ExpertLibGraphique.java  ExpertPolygon.java  ExpertRect.java  ExpertSwing.java  Formes.java  Interlocuteur.java  Point.java  Polygone.java  Rectangle.java  Serveur.java  Window.java  WindowAWT.java  WindowJavaFX.java  WindowSwing.java  WindowVisitor.java  diagram.uml  main.java  testMain.java
documentation/cpp/html/: _cercle_8h_source.html  _client_8h_source.html  _client_win_8h_source.html  _erreur_8h_source.html  _expert_8h_source.html  _expert_cercle_8h_source.html  _expert_forme_8h_source.html  _expert_groupe_8h_source.html  _expert_polygone_8h_source.html  _expert_segment_8h_source.html  _expert_triangle_8h_source.html  _fenetre_8h_source.html  _forme_8h_source.html  _groupe_forme_8h_source.html  _matrice2x2_8h_source.html  _polygone_8h_source.html  _segment_8h_source.html  _transformation_affine_8h_source.html  _triangle_8h_source.html  _vecteur2_d_8h_source.html  _visiteur_abstrait_8h_source.html  _visiteur_dessine_8h_source.html  annotated.html  class_brouillon.html  class_cercle-members.html  class_cercle.html  class_client_win-members.html  class_client_win.html  class_erreur-members.html  class_erreur.html  class_expert-members.html  class_expert.html  class_expert_awt-members.html  class_expert_awt.html  class_expert_cercle-members.html  class_expert_cercle.html  class_expert_dessine-members.html  class_expert_dessine.html  class_expert_forme-members.html  class_expert_forme.html  (+82 more)
documentation/cpp/latex/: _cercle_8h_source.tex  _client_8h_source.tex  _client_win_8h_source.tex  _erreur_8h_source.tex  _expert_8h_source.tex  _expert_cercle_8h_source.tex  _expert_forme_8h_source.tex  _expert_groupe_8h_source.tex  (+77 more)
(+39 files in other folders)
